--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -26,7 +26,7 @@
 
 			<div class="cd-timeline-content">
 				<h2>Diet</h2>
-				<p> </p>
+				<p> Titanosaurs were herbivores and also consumed grasses and palms however, for such a big animal, it didn’t provide much nutritional value for them. The titanosaurs did not chew food, they simply swallowed it. Its long neck allowed it to reach tall trees and vegetation. Its neck was long enough to reach a five-story window and as they were feeding, they simply moved their neck, not their entire body. It took the titanosaur 10 days to digest the plants they ate compared to 1 to 4 days for humans.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -39,7 +39,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Nesting</h2>
-				<p></p>
+				<p>The female titanosaur dug holes with her hind legs and laid about 30 to 40 eggs per hole covering them with dirt and vegetation. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on its skin protecting them from predators.They laid their eggs near active volcanoes because the added heat helped with incubation. The baby Titanosaurs gathered into groups to help protect them against predators as they are able to walk upon birth.
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -52,7 +53,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Location and Time Period</h2>
-				<p></p>
+				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years. 
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -65,7 +67,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>How was it found?</h2>
-				<p></p>
+				<p>The Titanosaur was found by a farmer who was looking for a lost sheep when he spotted some fossils peeking out of the ground in La Flecha, Argentina. He then contacted scientists who realized the dinosaur was different from the rest after examining its femur. By measuring the circumference of the front leg bone and thigh bone, they were able to estimate the body weight the titanosaur could support. At the exact digsite, six other titanosaurs were found who died around 101.6 million years ago
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -78,7 +81,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Physicality</h2>
-				<p></p>
+				<p>The femur was 8 feet long, the largest ever found and the lower end of the bone was straight as opposed to flared like that of other dinosaurs previously discovered. The connection they had between their tails and legs helped them be able to walk with their weight. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of the school buses. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones and reduce injuries do to their massive weight. Because of these stumps, all of their weight went to their toes when they walked. The titanosaur developed thick elastic skin on their feet to help their blood not clot and in turn avoided many health issues. It’s heart measured 6 feet in circumference, had four chambers, and pumped 90 liters of blood with every heartbeat every 5 seconds. 
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -91,7 +95,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Theories Over Death</h2>
-				<p></p>
+				<p>The titanosaur’s lifespan was 50 years. Young males were usually isolated from groups and often times many of them die near water sources, however paleontologists have not confirmed a gender for the titanosaur discovered. There were three different layers of  titanosaur fossils meaning the dinosaurs kept coming back and eventually died there. The dinosaurs were swept down by the remaining rivers, rain, and dirt leveling and burying them. At one point there were active volcanoes around the area attracting titanosaurs to lay their eggs near there because the heat of the volcanoes helped incubate their eggs. However, when the volcanoes erupted it eradicated all vegetation starving the titanosaurs and killing them.
+</p>
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -103,7 +108,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Additional Info</h2>
-				<p></p>
+				<p>It took scientists two weeks to put all of the casts together to get them ready for the exhibit. It took over two years to dig up all of the bones, however they were able to find 223 bones in total transforming the knowledge of dinosaurs.
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -116,7 +122,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Exhibit</h2>
-				<p></p>
+				<p>The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is a bit too big for its hall, therefore its head is peeking out and warmly welcoming guests to the hall. 
+</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
