simones files are back up

--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -7,7 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/stylejenny.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
 	<title>Responsive Vertical Timeline</title>
@@ -15,10 +15,6 @@
 <body>
 	<header>
 		<h1>Titanosaur Timeline</h1>
-<<<<<<< Updated upstream
-		
-=======
->>>>>>> Stashed changes
 	</header>
 	<section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
