--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -50,18 +50,16 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
 				<h2>Location and Time Period</h2>
-<<<<<<< Updated upstream
 				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years. 
 </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
-=======
 				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years.</p>
 			<!-- would make a small button on the bottom
 				<a href="#0" class="cd-read-more">Read more</a>
 			-->
 				<span class="cd-date">Jan 14</span>
->>>>>>> Stashed changes
+
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -108,13 +106,38 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2>Negative Aspect of Its Size</h2>
+				<p>  The titanosaur’s large size made the flow of blood from the heart to the rest of the body slower and harder. It also took longer for oxygen to reach the brain and other vital organs. Its large size and weight made the titanosaur move slower because it took longer for the nerve signals to reach the brain. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+		<div class="cd-timeline-content">
+				<h2>Positive Aspect of Its Size</h2>
+				<p> The titanosaur’s massive size allowed them to scare off any potential predators, outgrowing many of them. The titanosaur’s long neck allowed it to have greater access to vegetation in tall trees and all around it without ever moving its body. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Additional Info</h2>
-				<p>It took scientists two weeks to put all of the casts together to get them ready for the exhibit. It took over two years to dig up all of the bones, however they were able to find 223 bones in total transforming the knowledge of dinosaurs.
-</p>
+				<h2>Exhibit</h2>
+				<p>The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is a bit too big for its hall, therefore its head is peeking out and warmly welcoming guests to the hall. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -126,13 +149,14 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Exhibit</h2>
-				<p>The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is a bit too big for its hall, therefore its head is peeking out and warmly welcoming guests to the hall. 
-</p>
+				<h2>Additional Info</h2>
+				<p>It took scientists two weeks to put all of the casts together to get them ready for the exhibit. It took over two years to dig up all of the bones, however they were able to find 223 bones in total transforming the knowledge of dinosaurs.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
+	
 
 	</section> <!-- cd-timeline -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
