--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -59,10 +59,6 @@
 				<a href="#0" class="cd-read-more">Read more</a>
 			-->
 				<span class="cd-date">Jan 14</span>
-<<<<<<< HEAD:vertical-timeline/index.html
-
-=======
->>>>>>> origin/master:vertical-timeline-jenny/index.html
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -87,8 +83,7 @@
 
 			<div class="cd-timeline-content">
 				<h2>Physicality</h2>
-				<p>The femur was 8 feet long, the largest ever found and the lower end of the bone was straight as opposed to flared like that of other dinosaurs previously discovered. The connection they had between their tails and legs helped them be able to walk with their weight. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of the school buses. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones and reduce injuries do to their massive weight. Because of these stumps, all of their weight went to their toes when they walked. The titanosaur developed thick elastic skin on their feet to help their blood not clot and in turn avoided many health issues. It’s heart measured 6 feet in circumference, had four chambers, and pumped 90 liters of blood with every heartbeat every 5 seconds. 
-</p>
+				<p>The femur was 8 feet long, the largest ever found and the lower end of the bone was straight as opposed to flared like that of other dinosaurs previously discovered. The connection they had between their tails and legs helped them be able to walk with their weight. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of the school buses. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones and reduce injuries do to their massive weight. Because of these stumps, all of their weight went to their toes when they walked. The titanosaur developed thick elastic skin on their feet to help their blood not clot and in turn avoided many health issues. It’s heart measured 6 feet in circumference, had four chambers, and pumped 90 liters of blood with every heartbeat every 5 seconds. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
@@ -101,8 +96,7 @@
 
 			<div class="cd-timeline-content">
 				<h2>Theories Over Death</h2>
-				<p>The titanosaur’s lifespan was 50 years. Young males were usually isolated from groups and often times many of them die near water sources, however paleontologists have not confirmed a gender for the titanosaur discovered. There were three different layers of  titanosaur fossils meaning the dinosaurs kept coming back and eventually died there. The dinosaurs were swept down by the remaining rivers, rain, and dirt leveling and burying them. At one point there were active volcanoes around the area attracting titanosaurs to lay their eggs near there because the heat of the volcanoes helped incubate their eggs. However, when the volcanoes erupted it eradicated all vegetation starving the titanosaurs and killing them.
-</p>
+				<p>The titanosaur’s lifespan was 50 years. Young males were usually isolated from groups and often times many of them die near water sources, however paleontologists have not confirmed a gender for the titanosaur discovered. There were three different layers of  titanosaur fossils meaning the dinosaurs kept coming back and eventually died there. The dinosaurs were swept down by the remaining rivers, rain, and dirt leveling and burying them. At one point there were active volcanoes around the area attracting titanosaurs to lay their eggs near there because the heat of the volcanoes helped incubate their eggs. However, when the volcanoes erupted it eradicated all vegetation starving the titanosaurs and killing them.</p>
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
