--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -58,7 +58,7 @@
 			<!-- would make a small button on the bottom
 				<a href="#0" class="cd-read-more">Read more</a>
 			-->
-				<span class="cd-date">Jan 14</span>
+				<!--<span class="cd-date">Jan 14</span>-->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
