--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -33,12 +33,78 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
+				<h2>Dinosaurs Appeared About 225 Million Years Ago</h2>
+				<p> </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> <a href= "http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals"> Mammals Appeared About 225 Million Years Ago </a></h2>
+					<p> </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2><a href = "http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur">220-66 Million Years Ago</a></h2>
+				<p> Pterosaurs Existed</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+	<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> <a href= "http://www.amnh.org/learn-teach/grades-9-12/bridgeup-stem"> 2014 </a></h2>
+				<p> BridgeUp:STEM founded.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> <a href= "http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives">Jan 2016 </a></h2>
+				<p> Titanosaur arrived at AMNH.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
 				<h2>Diet</h2>
 				<p> Titanosaurs were herbivores and also consumed grasses and palms however, for such a big animal, it didn’t provide much nutritional value for them. The titanosaurs did not chew food, they simply swallowed it. Its long neck allowed it to reach tall trees and vegetation. Its neck was long enough to reach a five-story window and as they were feeding, they simply moved their neck, not their entire body. It took the titanosaur 10 days to digest the plants they ate compared to 1 to 4 days for humans.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
