new content added

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -27,14 +27,14 @@
 		<h1>Titanosaur Timeline</h1>
 	</header>
 	<section id="cd-timeline" class="cd-container">
-		<div class="cd-timeline-block">
+	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Dinosaurs Appeared About 225 Million Years Ago</h2>
-				<p> </p>
+				<h2><a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea">About 270 Million Years Ago</a></h2>
+				<p> Pangea formed. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -46,25 +46,235 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2> <a href= "http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals"> Mammals Appeared About 225 Million Years Ago </a></h2>
-					<p> </p>
+				<h2> 248 Million Years Ago </h2>
+				<p> Start of the Mesozoic Era. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-<div class="cd-timeline-block">
+	<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 245-240 Million Years Ago </h2>
+				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2>About 225 Million Years Ago</h2>
+				<p> Dinosaurs and <a href = "http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals"> Mammals </a> appeared.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2><a href = "http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur">220-66 Million Years Ago</a></h2>
-				<p> Pterosaurs Existed</p>
+				<p> Pterosaurs Existed.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 200 Million Years Ago</h2>
+				<p> Pangea separates.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2><a href = "http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21"> 199-145 Million Years Ago</a></h2>
+				<p> Paraves, ancestor of the modern-day birds, existed.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 141 Million Years Ago</h2>
+				<p> Cretaceous period. (Lasted 65.5 million years)</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2><a href = "http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex"> 85-65 Million Years Ago</a></h2>
+				<p> Tyrannosaurus Rex Existed.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 57 Million Years Ago </h2>
+					<p> The first primates, Euprimates existed. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+		<div class="cd-timeline-content">
+				<h2> <a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree"> 6-7 million years ago </a></h2>
+				<p> First member of human family, Hominidae, existed.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+		<div class="cd-timeline-content">
+				<h2> 150,000 years ago</h2>
+				<p> Homo Sapiens evolved.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+		<div class="cd-timeline-content">
+				<h2> <a href= "http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree"> 550 A.D.</a></h2>
+				<p> Giant tree at AMNH began growing.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> December 1815 </h2>
+				<p> Ada Lovelace, known to some as the “First Computer Programmer,” wrote the first algorithm for Charles Babbage’s Analytical Engine. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 1833 </h2>
+				<p> Charles Babbage, “Father of the Computer”, thought of his idea of creating an Analytical Engine, along with a printer to output the contents of the computer. Babbage was never able to finish the project because the British government defunded it. His son, Henry Babbage, finished a simpler version of the Analytical Engine in 1888. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 1924 </h2>
+				<p> Evelyn Boyd Granville was born. She was one of the first African-American women to receive a PhD from Yale in mathematics. Throughout her career, she built computer programs that were used for trajectory analysis in the Mercury Project and the Apollo Project. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> July 1976 </h2>
+				<p> Apple releases its first computer, the Apple 1 for $666.66. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> 1992 </h2>
+				<p> Grace Murray Hopper, creator of COBOL one of the first computer languages and of the term “debug” as well as the first woman to earn a PhD in mathematics from Yale and the first woman to reach the rank of Admiral in the U.S. Navy, passed away. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+	<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2> <a href= "http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur"> Spring 2014 </a></h2>
+				<p> The Femur of the first Titanosaur was discovered.</p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
