--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -29,7 +29,7 @@
 	<section id="cd-timeline" class="cd-container">
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -42,7 +42,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -55,7 +55,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -68,7 +68,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -81,7 +81,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -94,7 +94,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -108,7 +108,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -121,8 +121,10 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/shell.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
+
+<!-- refers to code below -->
 
 			<div class="cd-timeline-content">
 				<h2> 141 Million Years Ago</h2>
@@ -134,7 +136,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -147,7 +149,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -160,7 +162,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -173,7 +175,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -186,7 +188,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -199,7 +201,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -212,7 +214,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -225,7 +227,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -238,7 +240,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -251,7 +253,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -264,7 +266,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -278,7 +280,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -291,7 +293,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -304,7 +306,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -389,7 +391,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -402,7 +404,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="http://previews.123rf.com/images/twindesign/twindesign1302/twindesign130200056/18242696-dinosaur-egg-Stock-Photo.jpg" alt="Picture">
+				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
