--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -34,7 +34,8 @@
 
 			<div class="cd-timeline-content">
 				<h2><a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea">About 270 Million Years Ago</a></h2>
-				<p> Pangea formed. </p>
+				<p> Pangea formed.
+				<img src="pangea.jpg" class="img-responsive" width="304" height="236"> </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -338,11 +339,7 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
 				<h2>Location and Time Period</h2>
-				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years. 
-</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"></span>
-				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years.</p>
+				<p>The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. Four skeletons were found in Italy on May 2, 2006. The dinosaur roamed for about 140 million years. </p>
 			<!-- would make a small button on the bottom
 				<a href="#0" class="cd-read-more">Read more</a>
 			-->
