--- a/vertical-timeline-jenny/index 2.html
+++ b/vertical-timeline-jenny/index 2.html
@@ -2,20 +2,14 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/main.js"></script> <!-- Resource jQuery -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<style type="text/css">
-					h1{
+					h3{
 				font-family: 'dinosaurregular';
 							}
 		</style>
@@ -25,7 +19,7 @@
 
 <body>
 	<header>
-		<h1>Titanosaur Timeline</h1>
+		<h3>Titanosaur Timeline</h3>
 
 	</header>
 	<section id="cd-timeline" class="cd-container">
@@ -35,9 +29,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2><!-- <a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea"> -->About 270 Million Years Ago</a></h2>
-				<p> Pangaea formed. </p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Read more</a>
+				<h2><a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea">About 270 Million Years Ago</a></h2>
+				<p> Pangea formed. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -61,7 +55,7 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2> 245 to 240 Million Years Ago </h2>
+				<h2> 245-240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
@@ -87,9 +81,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>220 to 66 Million Years Ago</a></h2>
+				<h2><a href = "http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur">220-66 Million Years Ago</a></h2>
 				<p> Pterosaurs Existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -114,9 +108,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>199 to 145 Million Years Ago</a></h2>
+				<h2><a href = "http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21"> 199-145 Million Years Ago</a></h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -142,9 +136,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>85 to 65 Million Years Ago</a></h2>
+				<h2><a href = "http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex"> 85-65 Million Years Ago</a></h2>
 				<p> Tyrannosaurus Rex Existed.</p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -168,9 +162,9 @@
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
-				<h2>6 to 7 million years ago </a></h2>
+				<h2> <a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree"> 6-7 million years ago </a></h2>
 				<p> First member of human family, Hominidae, existed.</p>
-				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -194,9 +188,9 @@
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
-				<h2>550 A.D<span>.</span></a></h2>
+				<h2> <a href= "http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree"> 550 A.D.</a></h2>
 				<p> Giant tree at AMNH began growing.</p>
-				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -272,9 +266,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2> Spring 2014 </a></h2>
+				<h2> <a href= "http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur"> Spring 2014 </a></h2>
 				<p> The Femur of the first Titanosaur was discovered.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -299,9 +293,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Jan 2016 </a></h2>
+				<h2> <a href= "http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives">Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
-				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -442,6 +436,11 @@
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
+	
+
 	</section> <!-- cd-timeline -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
