changed spacing between divs and added pictures to the opposite side of the divs

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -54,7 +54,7 @@
 				<h2> 248 Million Years Ago </h2>
 				<p> Start of the Mesozoic Era. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"> <img src="mesozoicera.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -84,6 +84,7 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
+	
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/ptero.png" alt="Picture">
