added more pictures

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -38,10 +38,9 @@
 				<h2><!-- <a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea"> -->About 270 Million Years Ago</a></h2>
 				<p> Pangaea formed. </p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Read more</a>
-				<br> <br> <br>
-				<img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"> </p>
+				<br> <br> <br> </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -67,7 +66,7 @@
 				<h2> 245 to 240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="Nyasasaurus.png" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -78,9 +77,9 @@
 
 			<div class="cd-timeline-content">
 				<h2>About 225 Million Years Ago</h2>
-				<p> Dinosaurs and <a href = "http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals"> Mammals </a> appeared.</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<p> Dinosaurs and Mammals </a> appeared.</p>
+				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Read more</a>
+				<span class="cd-date"><img src="firstmammals.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -94,7 +93,7 @@
 				<h2>220 to 66 Million Years Ago</a></h2>
 				<p> Pterosaurs Existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src ="pterosaur.jpg" height="80%" width ="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -107,7 +106,7 @@
 				<h2> 200 Million Years Ago</h2>
 				<p> Pangea separates.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="pangea.gif" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -121,7 +120,7 @@
 				<h2>199 to 145 Million Years Ago</a></h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src ="treeofparaves.png" height="70%" width="85%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -136,7 +135,7 @@
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="cretaceous.jpg" height ="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -149,7 +148,7 @@
 				<h2>85 to 65 Million Years Ago</a></h2>
 				<p> Tyrannosaurus Rex Existed.</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="trex.png" height="80%" width="100%"</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -160,7 +159,7 @@
 
 			<div class="cd-timeline-content">
 				<h2> 57 Million Years Ago </h2>
-					<p> The first primates, Euprimates existed. </p>
+					<p> The first primates, Euprimates, existed. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
